k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: producer-server
  name: producer-server
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: producer-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: producer-server
    spec:
      containers:
      - image: ariellyblabla/producer-server:1.0
        imagePullPolicy: Always
        name: producer-server
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 9000
            protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: producer-server
  name: producer-server
spec:
  ports:
  - name: producer-server
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: producer-server
  type: ClusterIP
