k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: http.server
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: producer-server
                port:
                  number: 9000
